' Copyright (C) 2025 - present Juergen Zimmermann, Hochschule Karlsruhe
@startuml CarService

skinparam classAttributeIconSize 0

package java.util {
    interface Collection<E>
    class UUID
}

package com.acme.rentcar {
    package repository {
        interface CarRepository << interface >>
    }

    package service #DDDDDD {
        class CarService << control >> << @Service >> {
            + findAll(): Collection<Car>
            + findById(id: UUID): Car
            + findByHersteller(hersteller: String): Collection<Car>
            + create(dto: CarDTO): Car
            + update(id: UUID, dto: CarDTO): Car
        }
    }

    package entity {
        class Car
    }

    CarService o--> "1" CarRepository : repository
    CarService .down.> Car
    CarService .down.> UUID
    CarService ..> Collection
}

hide empty members

footer (c) Juergen Zimmermann

@enduml
